--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
 .container {
   height: 100vh;
   display: grid;
-  grid-template-columns: [sidebar-start] 12% [sidebar-end full-start] 20% [blog-left-end blog-right-start] 38% [blog-right-end blog-featured-start] 30% [full-end];
+  grid-template-columns: [sidebar-start] 12% [sidebar-end full-start] 23% [blog-left-end blog-right-start] 35% [blog-right-end blog-featured-start] 30% [full-end];
   grid-template-rows: 15vh 62vh 20vh 3vh; }
 
 .header {
@@ -31,7 +31,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: radial-gradient(circle at 5px 5px, rgba(128, 128, 128, 0.3) 1.7px, transparent 1.7px, transparent 10px) 0 0/8px 8px;
+  background: radial-gradient(circle at 5px 5px, rgba(128, 128, 128, 0.1) 1.7px, transparent 1.7px, transparent 10px) 0 0/8px 8px;
   position: relative; }
   .header::after {
     content: "";
@@ -44,7 +44,7 @@ body {
     background-color: black; }
   .header__main {
     font-family: "OldEnglish";
-    font-size: 6rem;
+    font-size: 6.5rem;
     font-weight: 100;
     letter-spacing: -1px;
     word-spacing: -10px;
@@ -65,15 +65,9 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  position: relative; }
-  .sidebar::before {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 2.5rem;
-    bottom: 2.5rem;
-    width: .5px;
-    background-color: #94918F; }
+  position: relative;
+  border-right: 1px solid #94918F;
+  margin: 2.5rem 0; }
   .sidebar__list {
     list-style: none; }
   .sidebar__item {
@@ -122,18 +116,19 @@ body {
 .blog__main-left {
   grid-column: full-start / blog-left-end;
   grid-row: 2 / 3;
-  padding: 2rem;
-  position: relative;
   display: flex;
-  flex-direction: column; }
-  .blog__main-left::before {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 2.5rem;
-    bottom: 2.5rem;
-    width: .5px;
-    background-color: #94918F; }
+  flex-direction: column;
+  border-right: 0.5px solid #94918F;
+  padding: 0 2rem;
+  position: relative;
+  margin: 2.5rem 0;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  scroll-snap-type: y mandatory; }
+  .blog__main-left::-webkit-scrollbar {
+    display: none; }
+  .blog__main-left--section {
+    scroll-snap-align: start; }
 
 .blog__main-right {
   grid-column: blog-right-start / blog-right-end;
@@ -142,14 +137,6 @@ body {
   position: relative;
   display: flex;
   flex-direction: column; }
-  .blog__main-right::before {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 2.5rem;
-    bottom: 2.5rem;
-    width: .5px;
-    background-color: #94918F; }
 
 .blog__left-box1 {
   color: #151515;
@@ -221,7 +208,7 @@ body {
   align-items: center;
   color: #151515;
   position: relative;
-  margin-top: 1rem; }
+  margin-top: 3rem; }
   .blog__left-box3::before {
     content: "";
     position: absolute;
@@ -234,14 +221,15 @@ body {
 .blog__left-page {
   font-family: "Space Grotesk", sans-serif;
   font-size: 5rem;
-  font-weight: 400; }
+  font-weight: 400;
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
 
 .blog__right-box1 {
   display: flex;
   align-items: center;
   margin-top: 1rem;
-  position: relative;
-  border: 1px solid #94918F; }
+  position: relative; }
   .blog__right-box1::before {
     content: "";
     position: absolute;
@@ -350,13 +338,119 @@ body {
   filter: grayscale(1); }
 
 .blog__bottom {
-  background-color: yellowgreen;
-  grid-column: full-start / blog-right-end; }
+  grid-column: full-start / blog-right-end;
+  position: relative;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0 2.5rem;
+  border-top: 1px solid #94918F; }
+  .blog__bottom-item {
+    color: #151515;
+    flex: 0 0 25%;
+    position: relative; }
+    .blog__bottom-item::before {
+      content: "";
+      position: absolute;
+      right: -2.5rem;
+      top: 1rem;
+      bottom: 1rem;
+      width: .5px;
+      opacity: .6;
+      background-color: #94918F; }
+    .blog__bottom-item:last-of-type::before {
+      opacity: 0; }
+    .blog__bottom-item span {
+      font-family: "Playfare Display", serif;
+      font-style: italic;
+      font-size: 1.2rem;
+      position: absolute;
+      right: 0;
+      bottom: -1rem;
+      text-transform: uppercase; }
+  .blog__bottom-title {
+    font-family: "Space Grotesk", sans-serif;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    padding-bottom: 1rem; }
+  .blog__bottom-content {
+    font-family: "Inter", sans-serif;
+    font-size: 1.5rem; }
 
 .blog__featured {
   grid-column: blog-featured-start / full-end;
   grid-row: 2 / 4;
-  background-color: purple; }
+  border-left: 1px solid #94918F;
+  margin: 2.5rem 0;
+  overflow-y: scroll;
+  color: #151515;
+  padding: 0 2rem; }
+  .blog__featured::-webkit-scrollbar {
+    display: none; }
+  .blog__featured-titlebox {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2.5rem;
+    border-bottom: 1px solid #94918F;
+    margin-bottom: 4rem; }
+    .blog__featured-titlebox span {
+      font-family: "Inter", sans-serif;
+      font-size: 2.5rem;
+      position: relative; }
+      .blog__featured-titlebox span::before {
+        content: "";
+        border-radius: 50%;
+        width: 12px;
+        height: 12px;
+        left: -2rem;
+        top: 1.25rem;
+        background-color: #151515;
+        position: absolute; }
+  .blog__featured-title--main {
+    font-family: "Playfare Display", serif;
+    font-size: 2.8rem;
+    font-weight: 200; }
+  .blog__featured-article {
+    position: relative;
+    margin-bottom: 3rem;
+    padding: 0 2.5rem; }
+  .blog__featured-title {
+    font-family: "Space Grotesk", sans-serif;
+    font-size: 3rem;
+    line-height: 4rem; }
+  .blog__featured-detail {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.6rem;
+    font-family: "Playfare Display", serif;
+    font-style: italic; }
+  .blog__featured-content {
+    font-family: "Inter", sans-serif;
+    font-size: 1.7rem;
+    padding-top: 2rem;
+    position: relative; }
+    .blog__featured-content::before {
+      content: "";
+      position: absolute;
+      bottom: -5rem;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      border-top: 1px solid #94918F; }
+  .blog__featured-link:link, .blog__featured-link:visited {
+    color: #151515;
+    text-decoration: none;
+    display: block;
+    font-family: "Inter", sans-serif;
+    font-size: 2.5rem;
+    margin: 5.5rem 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; }
+    .blog__featured-link:link svg, .blog__featured-link:visited svg {
+      width: 30px;
+      margin-right: 1rem; }
 
 .blog__marquee-box {
   background-color: aquamarine;
