--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -22,7 +22,9 @@
     &--section {
       scroll-snap-align: start;
     }
-    
+    &--section:nth-child(3) {
+      margin-top: .5rem;
+    }
   }
 
   &-right {
@@ -155,15 +157,14 @@
 }
 
 
+
 .blog__right {
   &-box1 {
     display: flex;
     align-items: center;
     margin-top: 1rem;
     position: relative;
-    // border: 1px solid $color-border;
     
-
     &::before {
       content: "";
       position: absolute;
@@ -184,11 +185,6 @@
     width: 100%;
     height: auto;
     filter: grayscale(1) brightness(150%);
-    transition: transform 2s ease-in-out;
-
-    &:hover {
-      transform: scale(1.1);
-    }
   }
 
   &-text-div {
@@ -199,7 +195,7 @@
       font-family: $font-title;
       font-size: 6rem;
       display: block;
-      margin-bottom: -5rem;
+      margin-bottom: -3.5rem;
       margin-top: -2rem;
     }
     & span:nth-of-type(2) {
@@ -344,7 +340,7 @@
   }
   &-title {
     font-family: $font-title;
-    font-size: 2rem;
+    font-size: 2.5rem;
     line-height: 2.5rem;
     padding-bottom: 1rem;
   }
@@ -354,6 +350,9 @@
   }
 
 }
+
+
+
 
 
 .blog__featured {
@@ -377,6 +376,11 @@
     padding: 0 2.5rem;
     border-bottom: 1px solid $color-border;
     margin-bottom: 4rem;
+    position: sticky;
+    top: 0;
+    opacity: 1;
+    z-index: 10;
+    background-color: $color-bg;
 
     & span {
       font-family: $font-subtitle;
@@ -407,9 +411,14 @@
     position: relative;
     margin-bottom: 3rem;
     padding: 0 2.5rem;
+    z-index: -1;
   }
   &-img {
-    
+    width: 100%;
+    height: 220px;
+    max-height: 20vh;
+    object-fit: cover;
+    filter: grayscale(1);
   }
   &-title {
     font-family: $font-title;
