--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,16 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-size: 53.5%;
   line-height: 1.6;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased; }
 
 body {
   background-color: #E9E6E4; }
+
+::selection {
+  background-color: #D4CFBB; }
 
 .container {
   height: 100vh;
@@ -70,9 +73,19 @@ body {
   margin: 2.5rem 0; }
   .sidebar__list {
     list-style: none; }
+    .sidebar__list li:nth-last-child(-n+2) a {
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      font-weight: 300; }
+      .sidebar__list li:nth-last-child(-n+2) a:hover {
+        text-decoration: line-through; }
+    .sidebar__list li:nth-last-child(-n+2) svg {
+      width: 24px; }
   .sidebar__item {
     margin-left: 2rem;
     margin-top: 3rem; }
+    .sidebar__item:nth-of-type(6) {
+      margin-top: 10rem; }
   .sidebar__link:link, .sidebar__link:visited {
     color: #151515;
     text-decoration: none;
@@ -112,6 +125,8 @@ body {
         height: 15px;
         background-color: #151515;
         margin-right: 1rem; }
+  .sidebar__article {
+    font-size: 1.2rem; }
 
 .blog__main-left {
   grid-column: full-start / blog-left-end;
@@ -126,7 +141,8 @@ body {
   -webkit-overflow-scrolling: touch;
   scroll-snap-type: y mandatory; }
   .blog__main-left::-webkit-scrollbar {
-    display: none; }
+    display: none;
+    scrollbar-width: none; }
   .blog__main-left--section {
     scroll-snap-align: start; }
   .blog__main-left--section:nth-child(3) {
@@ -481,7 +497,7 @@ body {
     width: 10px;
     height: 10px;
     left: -2.7rem;
-    top: .7rem;
+    top: .55rem;
     background-color: #E9E6E4;
     position: absolute; }
 
@@ -499,7 +515,7 @@ body {
 
 .marquee__inner {
   display: inline-block;
-  animation: marquee calc(60s / 2000 * var(--width)) linear infinite;
+  animation: marquee calc(60s / 1000 * var(--width)) linear infinite;
   --width: 800; }
 
 .marquee__inner p {
@@ -510,3 +526,129 @@ body {
     transform: translate3d(0, 0, 0); }
   100% {
     transform: translate3d(-100%, 0, 0); } }
+
+.container__article-1 {
+  background-color: #E9E6E4;
+  padding: 3rem;
+  padding-bottom: 0;
+  display: grid;
+  grid-template-columns: repeat(7, minmax(min-content, 1fr));
+  grid-template-rows: repeat(26, 9vw);
+  grid-auto-flow: dense; }
+
+.article1__img-box {
+  background-color: #fff;
+  grid-row: 1 / 5;
+  grid-column: 1 / -1; }
+
+.article1__img {
+  height: 100%;
+  width: 100%;
+  display: block;
+  object-fit: cover;
+  filter: grayscale(1); }
+
+.article1__title-box {
+  grid-column: 1 / span 4;
+  grid-row: 5 / span 2;
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+
+.article1__title {
+  color: #151515;
+  font-size: 5vw;
+  font-family: "Space Grotesk", sans-serif;
+  line-height: 4.5vw;
+  font-weight: 700; }
+
+.article1__subtitle {
+  color: #151515;
+  font-size: 3.3rem;
+  font-family: "Space Grotesk", sans-serif;
+  margin-bottom: -.5rem; }
+
+.article1__content-box--right {
+  grid-column: 5 / -1;
+  padding-top: 2rem; }
+
+.article1__content--right {
+  color: #151515;
+  font-family: "Inter", sans-serif;
+  font-size: 2.2rem;
+  text-justify: inter-word;
+  text-align: justify; }
+  .article1__content--right:last-child {
+    margin-top: 4.9rem; }
+
+.article1__content-box--main {
+  grid-column: 2 / span 5;
+  margin: 15rem 10rem 0 10rem;
+  padding-top: 7rem;
+  border-top: 1px solid #94918F; }
+  .article1__content-box--main p:last-of-type {
+    padding-bottom: 0; }
+
+.article1__content--main {
+  color: #151515;
+  font-family: "Inter", sans-serif;
+  font-size: 2.2rem;
+  padding-bottom: 5rem;
+  text-justify: inter-word;
+  text-align: justify; }
+  .article1__content--main-list {
+    position: relative;
+    padding-left: 4rem;
+    line-height: 4.5rem;
+    font-size: 2.4rem;
+    font-family: "Playfare Display", serif;
+    font-style: italic; }
+    .article1__content--main-list::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 1.1rem;
+      bottom: 6.1rem;
+      width: 2.5px;
+      opacity: .6;
+      background-color: #94918F; }
+    .article1__content--main-list span {
+      font-size: 2.5rem;
+      font-weight: bolder; }
+
+.article1__footer-box {
+  grid-column: 1 / -1;
+  grid-row: 27 / span 2;
+  border-top: 5px solid #151515;
+  color: #151515;
+  padding-bottom: 1rem;
+  background: radial-gradient(circle at 5px 5px, rgba(128, 128, 128, 0.1) 1.7px, transparent 1.7px, transparent 10px) 0 0/8px 8px; }
+
+.article1__footer--wrapper {
+  display: flex;
+  align-items: center;
+  margin-top: 15rem; }
+
+.article1__footer-title {
+  font-family: "OldEnglish";
+  font-size: 4rem;
+  font-weight: 100;
+  letter-spacing: -1px;
+  word-spacing: -3px; }
+
+.article1__footer-content--wrapper {
+  display: flex;
+  margin-left: auto;
+  margin-right: 20rem; }
+
+.article1__footer-content-box1 {
+  margin-right: 40rem; }
+
+.article1__footer-content {
+  font-family: "Inter", sans-serif;
+  font-size: 1.5rem; }
+  .article1__footer-content span {
+    font-family: "Playfare Display", serif;
+    font-size: 1.7rem;
+    font-style: italic; }
