--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -18,6 +18,7 @@
 
     &::-webkit-scrollbar {
       display: none;
+      scrollbar-width: none;
     }
     &--section {
       scroll-snap-align: start;
