--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -15,23 +15,30 @@
   border-right: 1px solid $color-border;
   margin: 2.5rem 0;
 
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   right: 0;
-  //   top: 2.5rem;
-  //   bottom: 2.5rem;
-  //   width: .5px;
-  //   background-color: $color-border;
-  // }
-
   &__list {
     list-style: none;
+
+    & li:nth-last-child(-n+2) a {
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      font-weight: 300;
+      
+      &:hover {
+        text-decoration: line-through;
+      }
+    }
+    & li:nth-last-child(-n+2) svg {
+      width: 24px;
+    }
 
   }
   &__item {
     margin-left: 2rem;
     margin-top: 3rem;
+
+    &:nth-of-type(6) {
+      margin-top: 10rem;
+    }
 
   }
   &__link:link,
@@ -41,7 +48,6 @@
     display: block;
     font-family: $font-subtitle;
     font-size: 2.5rem;
-    // font-weight: 200;
 
     display: flex;
     align-items: center;
@@ -98,6 +104,10 @@
         margin-right: 1rem;
       }
     }
+  }
+
+  &__article {
+    font-size: 1.2rem;
   }
 }
 
