--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,3 +8,9 @@ $color-bg: #E9E6E4;
 $color-text: #151515;
 $color-border: #94918F;
 $color-highlight: #D4CFBB;
+
+// BREAKPOINTS.
+$breakpoint-largest: 100em; // 1600px
+$breakpoint-large: 87.5em; // 1400px
+$breakpoint-medium: 68.75em; //1100px
+$breakpoint-small: 28.125em; // 450px
