--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,19 @@
 
 html {
   box-sizing: border-box;
-  font-size: 53.5%;
+  font-size: .51vw;
   line-height: 1.6;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased; }
+  @media only screen and (max-width: 100em) {
+    html {
+      font-size: .5vw; } }
+  @media only screen and (max-width: 87.5em) {
+    html {
+      font-size: .585vw; } }
+  @media only screen and (max-width: 68.75em) {
+    html {
+      font-size: .75vw; } }
 
 body {
   background-color: #E9E6E4; }
@@ -27,6 +36,12 @@ body {
   display: grid;
   grid-template-columns: [sidebar-start] 12% [sidebar-end full-start] 23% [blog-left-end blog-right-start] 35% [blog-right-end blog-featured-start] 30% [full-end];
   grid-template-rows: 15vh 60vh 22vh 3vh; }
+  @media only screen and (max-width: 87.5em) and (pointer: coarse) {
+    .container {
+      grid-template-rows: 11.8vh 60vh 22vh 3vh; } }
+  @media only screen and (max-width: 68.75em) and (pointer: coarse) {
+    .container {
+      grid-template-rows: 12.6vh 60vh 22vh 3vh; } }
 
 .header {
   grid-column: sidebar-start / full-end;
@@ -47,19 +62,25 @@ body {
     background-color: #151515; }
   .header__main {
     font-family: "OldEnglish";
-    font-size: 6.5rem;
+    font-size: 3.4vw;
     font-weight: 100;
     letter-spacing: -1px;
     word-spacing: -10px;
     color: black; }
+    @media only screen and (max-width: 68.75em) {
+      .header__main {
+        font-size: 5vw; } }
   .header__date {
     font-family: "Playfare Display", serif;
-    font-size: 1.6rem;
+    font-size: .85vw;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: .5px;
     word-spacing: 2px;
     color: #151515; }
+    @media only screen and (max-width: 68.75em) {
+      .header__date {
+        font-size: 1.3vw; } }
 
 .sidebar {
   grid-column: sidebar-start / sidebar-end;
@@ -74,29 +95,32 @@ body {
   .sidebar__list {
     list-style: none; }
     .sidebar__list li:nth-last-child(-n+2) a {
-      font-size: 1.5rem;
+      font-size: .75vw;
       text-transform: uppercase;
       font-weight: 300; }
       .sidebar__list li:nth-last-child(-n+2) a:hover {
         text-decoration: line-through; }
     .sidebar__list li:nth-last-child(-n+2) svg {
-      width: 24px; }
+      width: 20px; }
   .sidebar__item {
     margin-left: 2rem;
     margin-top: 3rem; }
     .sidebar__item:nth-of-type(6) {
-      margin-top: 10rem; }
+      margin-top: 10vw; }
   .sidebar__link:link, .sidebar__link:visited {
     color: #151515;
     text-decoration: none;
     display: block;
     font-family: "Inter", sans-serif;
-    font-size: 2.5rem;
+    font-size: 1.25vw;
     display: flex;
     align-items: center; }
     .sidebar__link:link svg, .sidebar__link:visited svg {
-      width: 35px;
+      width: 1.75vw;
       margin-left: 5px; }
+    @media only screen and (max-width: 68.75em) {
+      .sidebar__link:link, .sidebar__link:visited {
+        font-size: 1.4vw; } }
   .sidebar__item:not(:first-child) a svg {
     display: none; }
   .sidebar__item:first-child a svg {
@@ -112,7 +136,7 @@ body {
       text-decoration: none;
       display: block;
       font-family: "Inter", sans-serif;
-      font-size: 1.9rem;
+      font-size: 1vw;
       margin-bottom: 1rem; }
       .sidebar__info-link:link:last-child, .sidebar__info-link:visited:last-child {
         margin-bottom: 3rem; }
@@ -125,6 +149,10 @@ body {
         height: 15px;
         background-color: #151515;
         margin-right: 1rem; }
+        @media only screen and (max-width: 68.75em) {
+          .sidebar__info-link--2:before {
+            width: 10px;
+            height: 10px; } }
   .sidebar__article {
     font-size: 1.2rem; }
 
@@ -147,6 +175,9 @@ body {
     scroll-snap-align: start; }
   .blog__main-left--section:nth-child(3) {
     margin-top: .5rem; }
+  @media not all and (pointer: coarse) and (max-width: 1500px) {
+    .blog__main-left--section:nth-child(2) {
+      margin: 3rem 0; } }
 
 .blog__main-right {
   grid-column: blog-right-start / blog-right-end;
@@ -159,6 +190,9 @@ body {
 .blog__left-box1 {
   color: #151515;
   margin-bottom: 2rem; }
+  @media only screen and (max-width: 87.5em) and (pointer: coarse) {
+    .blog__left-box1 {
+      margin-bottom: 12%; } }
   .blog__left-box1 span {
     font-family: "Inter", sans-serif;
     font-size: 1.2rem;
@@ -175,7 +209,8 @@ body {
 
 .blog__left-content {
   font-family: "Inter", sans-serif;
-  font-size: 1.8rem; }
+  font-size: 1.7rem;
+  padding-bottom: 2rem; }
 
 .blog__left-box2 {
   color: #151515; }
@@ -226,7 +261,13 @@ body {
   align-items: center;
   color: #151515;
   position: relative;
-  margin-top: 3rem; }
+  margin-top: 9%; }
+  @media only screen and (max-width: 1500px) {
+    .blog__left-box3 {
+      margin-top: 13%; } }
+  @media only screen and (max-width: 87.5em) and (pointer: coarse) {
+    .blog__left-box3 {
+      margin-top: 13%; } }
   .blog__left-box3::before {
     content: "";
     position: absolute;
@@ -240,8 +281,8 @@ body {
   font-family: "Space Grotesk", sans-serif;
   font-size: 5rem;
   font-weight: 400;
-  margin-top: 2rem;
-  margin-bottom: 2rem; }
+  margin-top: 6%;
+  margin-bottom: 6%; }
 
 .blog__right-box1 {
   display: flex;
@@ -256,6 +297,9 @@ body {
     transform: translateX(-50%);
     width: 80%;
     border-top: 1px solid #94918F; }
+  @media only screen and (max-width: 68.75em) {
+    .blog__right-box1 {
+      flex-direction: column; } }
 
 .blog__right-img-div {
   flex: 0 0 55%;
@@ -276,6 +320,9 @@ body {
     display: block;
     margin-bottom: -3.5rem;
     margin-top: -2rem; }
+    @media only screen and (max-width: 68.75em) {
+      .blog__right-text-div span:nth-of-type(1) {
+        margin-top: 0; } }
   .blog__right-text-div span:nth-of-type(2) {
     font-family: "Inter", sans-serif;
     font-size: 1.2rem;
@@ -289,10 +336,16 @@ body {
   line-height: 2.5rem;
   padding-bottom: 2rem;
   padding-top: .7rem; }
+  @media only screen and (max-width: 68.75em) {
+    .blog__right-title {
+      font-size: 2.3rem; } }
 
 .blog__right-content {
   font-family: "Inter", sans-serif;
   font-size: 1.5rem; }
+  @media only screen and (max-width: 68.75em) {
+    .blog__right-content {
+      font-size: 1.3rem; } }
 
 .blog__right-box2 {
   color: #151515;
@@ -300,19 +353,37 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center; }
+  @media only screen and (max-width: 87.5em) {
+    .blog__right-box2 {
+      margin-top: 8rem; } }
+  @media only screen and (max-width: 68.75em) {
+    .blog__right-box2 {
+      margin-top: 5rem; } }
   .blog__right-box2 span {
     font-family: "Inter", sans-serif;
     font-size: 1.2rem;
     font-weight: 300;
     letter-spacing: .5rem;
     text-transform: uppercase;
-    margin-bottom: .7rem; }
+    margin-bottom: 1rem; }
+    @media only screen and (max-width: 68.75em) {
+      .blog__right-box2 span {
+        margin-bottom: -1rem; } }
 
 .blog__right-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   row-gap: 1rem; }
+  @media only screen and (max-width: 87.5em) {
+    .blog__right-grid {
+      margin-top: 6%;
+      row-gap: 9%; } }
+  @media only screen and (max-width: 68.75em) {
+    .blog__right-grid {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      row-gap: 6%; } }
 
 .blog__right-quote-div {
   display: flex;
@@ -320,9 +391,10 @@ body {
 
 .blog__right-author-box {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: flex-start;
-  margin: 1rem 0 1rem 1.5rem; }
+  margin: 1rem 0 1rem 1.5rem;
+  position: relative; }
   .blog__right-author-box span {
     font-size: 1.4rem;
     font-style: italic;
@@ -331,6 +403,12 @@ body {
     text-transform: capitalize;
     margin-left: 1rem;
     margin-top: 1rem; }
+    @media only screen and (max-width: 68.75em) {
+      .blog__right-author-box span {
+        font-size: 1.3rem;
+        position: absolute;
+        top: -.5rem;
+        left: 3rem; } }
 
 .blog__right-quote {
   font-family: "Playfare Display", serif;
@@ -346,6 +424,12 @@ body {
     left: -.3rem;
     font-size: 3.5rem;
     font-family: "Space Grotesk", sans-serif; }
+    @media only screen and (max-width: 68.75em) {
+      .blog__right-quote span {
+        top: -.8rem; } }
+  @media only screen and (max-width: 68.75em) {
+    .blog__right-quote {
+      font-size: 1.4rem; } }
 
 .blog__right-portrait {
   width: 3rem;
@@ -381,7 +465,6 @@ body {
       font-size: 1.2rem;
       position: absolute;
       right: 0;
-      bottom: -1rem;
       text-transform: uppercase; }
   .blog__bottom-title {
     font-family: "Space Grotesk", sans-serif;
@@ -402,6 +485,9 @@ body {
   padding: 0 2rem; }
   .blog__featured::-webkit-scrollbar {
     display: none; }
+  @media only screen and (max-width: 68.75em) {
+    .blog__featured {
+      padding: 0; } }
   .blog__featured-titlebox {
     display: flex;
     align-items: center;
@@ -418,6 +504,9 @@ body {
       font-family: "Inter", sans-serif;
       font-size: 2.5rem;
       position: relative; }
+      @media only screen and (max-width: 68.75em) {
+        .blog__featured-titlebox span {
+          font-size: 2rem; } }
       .blog__featured-titlebox span::before {
         content: "";
         border-radius: 50%;
@@ -427,10 +516,23 @@ body {
         top: 1.25rem;
         background-color: #151515;
         position: absolute; }
+        @media only screen and (max-width: 68.75em) {
+          .blog__featured-titlebox span::before {
+            left: -1.8rem;
+            top: .95rem;
+            width: 9px;
+            height: 9px; } }
+    @media only screen and (max-width: 68.75em) {
+      .blog__featured-titlebox {
+        margin: 0 2.5rem 4.5rem 2.5rem;
+        padding: .7rem; } }
   .blog__featured-title--main {
     font-family: "Playfare Display", serif;
     font-size: 2.8rem;
     font-weight: 200; }
+    @media only screen and (max-width: 68.75em) {
+      .blog__featured-title--main {
+        font-size: 2.3rem; } }
   .blog__featured-article {
     position: relative;
     margin-bottom: 3rem;
@@ -537,7 +639,6 @@ body {
   grid-auto-flow: dense; }
 
 .article1__img-box {
-  background-color: #fff;
   grid-row: 1 / 5;
   grid-column: 1 / -1; }
 
@@ -565,7 +666,7 @@ body {
 
 .article1__subtitle {
   color: #151515;
-  font-size: 3.3rem;
+  font-size: 1.65vw;
   font-family: "Space Grotesk", sans-serif;
   margin-bottom: -.5rem; }
 
@@ -576,7 +677,7 @@ body {
 .article1__content--right {
   color: #151515;
   font-family: "Inter", sans-serif;
-  font-size: 2.2rem;
+  font-size: 1.16vw;
   text-justify: inter-word;
   text-align: justify; }
   .article1__content--right:last-child {
@@ -588,7 +689,7 @@ body {
   padding-top: 7rem;
   border-top: 1px solid #94918F; }
   .article1__content-box--main p:last-of-type {
-    padding-bottom: 0; }
+    border-bottom: 1px solid #94918F; }
 
 .article1__content--main {
   color: #151515;
@@ -617,12 +718,100 @@ body {
       font-size: 2.5rem;
       font-weight: bolder; }
 
+.article1__button-box {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 2rem; }
+  .article1__button-box :not(:last-child) {
+    margin-right: 1rem; }
+
+.article1__button--like {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #E9E6E4;
+  padding: 1rem 1.5rem;
+  border-radius: 100px;
+  border: 1px solid #94918F;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: rgba(21, 21, 21, 0.7);
+  transition: background-color .2s; }
+  .article1__button--like svg {
+    margin-right: .7rem;
+    fill: #94918F;
+    width: 18px;
+    height: auto; }
+  .article1__button--like:hover svg {
+    fill: #EB5757; }
+  .article1__button--like:hover {
+    background-color: rgba(148, 145, 143, 0.2); }
+  .article1__button--like:active {
+    background-color: #F5B9BA;
+    border: none;
+    padding: 1.1rem 1.6rem; }
+  .article1__button--like.active {
+    background-color: #F5B9BA;
+    border: none;
+    padding: 1.1rem 1.6rem; }
+  .article1__button--like.active svg {
+    fill: #EB5757;
+    animation: like 0.5s 1; }
+
+@-webkit-keyframes like {
+  0% {
+    transform: scale(1); }
+  90% {
+    transform: scale(1.2); }
+  100% {
+    transform: scale(1.1); } }
+
+.article1__button--share {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #E9E6E4;
+  padding: 1rem 1.5rem;
+  border-radius: 100px;
+  border: 1px solid #94918F;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: rgba(21, 21, 21, 0.7);
+  transition: background-color .2s; }
+  .article1__button--share svg {
+    margin-right: .7rem;
+    width: 18px;
+    height: auto; }
+  .article1__button--share:hover {
+    background-color: rgba(148, 145, 143, 0.2); }
+
+.article1__button--bookmark {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #E9E6E4;
+  padding: 1rem 1.5rem;
+  border-radius: 100px;
+  border: 1px solid #94918F;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: rgba(21, 21, 21, 0.7);
+  transition: background-color .2s; }
+  .article1__button--bookmark svg {
+    margin-right: .7rem;
+    width: 18px;
+    height: auto; }
+  .article1__button--bookmark:hover {
+    background-color: rgba(148, 145, 143, 0.2); }
+
 .article1__footer-box {
   grid-column: 1 / -1;
   grid-row: 27 / span 2;
   border-top: 5px solid #151515;
   color: #151515;
   padding-bottom: 1rem;
+  margin-top: 15rem;
   background: radial-gradient(circle at 5px 5px, rgba(128, 128, 128, 0.1) 1.7px, transparent 1.7px, transparent 10px) 0 0/8px 8px; }
 
 .article1__footer--wrapper {
@@ -640,10 +829,10 @@ body {
 .article1__footer-content--wrapper {
   display: flex;
   margin-left: auto;
-  margin-right: 20rem; }
+  margin-right: 10rem; }
 
 .article1__footer-content-box1 {
-  margin-right: 40rem; }
+  margin-right: 30rem; }
 
 .article1__footer-content {
   font-family: "Inter", sans-serif;
@@ -652,3 +841,202 @@ body {
     font-family: "Playfare Display", serif;
     font-size: 1.7rem;
     font-style: italic; }
+
+.container__article-2 {
+  background-color: #E9E6E4;
+  padding: 3rem;
+  padding-bottom: 0;
+  display: grid;
+  grid-template-columns: repeat(7, minmax(min-content, 1fr));
+  grid-template-rows: repeat(12, 4.5vw); }
+
+.article2__title-box {
+  grid-column: 1 / -1;
+  grid-row: 1 / span 4;
+  background: radial-gradient(circle at 5px 5px, rgba(128, 128, 128, 0.1) 1.7px, transparent 1.7px, transparent 10px) 0 0/8px 8px; }
+
+.article2__title {
+  color: #151515;
+  font-family: "Space Grotesk", sans-serif;
+  font-size: 6vw;
+  line-height: 5.8vw;
+  font-weight: 500;
+  text-transform: uppercase; }
+
+.article2__title-box-2 {
+  grid-column: 3 / -1;
+  grid-row: 11 / span 2;
+  border-bottom: 10px solid black; }
+
+.article2__title-2 {
+  padding-top: 1.5rem;
+  margin-right: -.1rem;
+  text-align: right; }
+
+.article2__details-box {
+  grid-column: 6 / -1;
+  grid-row: 2 / span 3;
+  display: flex;
+  margin-top: 3.5rem;
+  position: relative; }
+
+.article2__details {
+  color: #151515;
+  font-family: "Inter", sans-serif;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  text-align: right;
+  font-weight: 500; }
+  .article2__details--1 {
+    margin-left: 10rem; }
+  .article2__details--2 {
+    position: absolute;
+    right: 0;
+    bottom: 7.3rem; }
+
+.article2__img-box {
+  grid-column: 1 / -1;
+  grid-row: 5 / span 6; }
+
+.article2__img {
+  height: 100%;
+  width: 100%;
+  display: block;
+  object-fit: cover;
+  filter: grayscale(1); }
+
+.article2__content-box--left {
+  grid-column: 1 / span 2;
+  grid-row: 11 / span 2;
+  margin-top: 2.3rem;
+  margin-right: 19.6rem; }
+
+.article2__content--left {
+  color: #151515;
+  font-family: "Inter", sans-serif;
+  font-size: 1.9rem;
+  line-height: 1.3;
+  text-justify: inter-word;
+  text-align: justify; }
+
+.article2__main-container {
+  padding-top: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(15, minmax(min-content, 1fr));
+  grid-template-rows: repeat(21, 4.5vw); }
+
+.article2__text-column--1 {
+  grid-column: 1 / span 3;
+  grid-row: 1 / 9;
+  padding: 0 2.5rem 0 3rem; }
+
+.article2__text-column--2 {
+  grid-column: 4 / span 3;
+  grid-row: 1 / 9;
+  padding: 3rem 2.5rem 0 2.5rem; }
+
+.article2__text-column--3 {
+  grid-column: 7 / span 3;
+  grid-row: 1 / 9;
+  padding: 3rem 2.5rem 0 2.5rem; }
+
+.article2__text-column--4 {
+  grid-column: 10 / span 3;
+  grid-row: 1 / 6;
+  padding: 3rem 2.5rem 0 2.5rem; }
+
+.article2__text-column--5 {
+  grid-column: 13 / span 3;
+  grid-row: 1 / 6;
+  padding: 3rem 3rem 0 2.5rem; }
+
+.article2__text-column--6 {
+  grid-column: 1 / span 2;
+  margin-top: -3.7rem;
+  padding-left: 3rem;
+  padding-right: 5rem; }
+
+.article2__text-column--7 {
+  grid-column: 1 / span 3;
+  padding-top: 5.4rem;
+  padding-left: 3rem;
+  padding-right: 2.5rem; }
+
+.article2__text-column--8 {
+  grid-column: 4 / span 3;
+  padding: 5.3rem 2.5rem 0 2.5rem; }
+
+.article2__text-column--9 {
+  grid-column: 12 / span 2;
+  grid-row: 7 / span 3; }
+
+.article2__text-column--10 {
+  grid-column: 10 / span 2;
+  grid-row: 7 / span 3;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  margin-top: -.5rem; }
+
+.article2__text-column--11 {
+  grid-column: 10 / span 3;
+  grid-row: 11 / -1;
+  padding: 0 2.5rem 0 2.5rem;
+  margin-top: -5.9rem; }
+
+.article2__text-column--12 {
+  grid-column: 14 / -1;
+  grid-row: 7 / span 3;
+  padding-left: 2.5rem;
+  padding-right: 3rem; }
+
+.article2__text-column--13 {
+  grid-column: 13 / span 3;
+  grid-row: 11 / 19;
+  padding-left: 2.5rem;
+  padding-right: 3rem;
+  margin-top: -5.8rem; }
+
+.article2__text-column--14 {
+  grid-column: 13 / -1;
+  grid-row: 19 / -1;
+  margin-right: 3rem;
+  margin-left: 2.5rem;
+  margin-top: 7rem;
+  text-align: right;
+  border-top: 1px solid #94918F; }
+
+.article2__text-column span {
+  color: #151515;
+  font-family: "Playfare Display", serif;
+  font-size: 1.7rem;
+  font-style: italic; }
+
+.article2__text {
+  color: #151515;
+  font-family: "Inter", sans-serif;
+  font-size: 1.9rem;
+  line-height: 1.3;
+  text-justify: inter-word;
+  text-align: justify;
+  text-indent: 10%;
+  hyphens: auto; }
+
+.article2__text-heading {
+  color: #151515;
+  font-family: "Playfare Display", serif;
+  font-style: italic;
+  font-size: 3rem;
+  text-align: center;
+  font-weight: 300;
+  padding: 2rem; }
+
+.article2__text-img--box {
+  grid-column: 3 / span 4;
+  grid-row: 9 / span 4;
+  padding-right: 2.5rem;
+  padding-top: 1rem; }
+
+.article2__text-img {
+  width: 100%;
+  object-fit: cover;
+  filter: grayscale(1); }
