--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -27,19 +27,29 @@
 
   &__main {
     font-family: $font-logo;
-    font-size: 6.5rem;
+    // font-size: 6.5rem;
+    font-size: 3.4vw;
     font-weight: 100;
     letter-spacing: -1px;
     word-spacing: -10px;
     color: black;
+
+    @media only screen and (max-width: $breakpoint-medium) {
+      font-size: 5vw;
+    }
   }
   &__date {
     font-family: $font-italic;
-    font-size: 1.6rem;
+    // font-size: 1.6rem;
+    font-size: .85vw;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: .5px;
     word-spacing: 2px;
     color: $color-text;
+
+    @media only screen and (max-width: $breakpoint-medium) {
+      font-size: 1.3vw;
+    }
   }
 }
