--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,12 @@ body {
   @media not all and (pointer: coarse) and (max-width: 1500px) {
     .blog__main-left--section:nth-child(2) {
       margin: 3rem 0; } }
+  @media only screen and (max-width: 68.75em) {
+    .blog__main-left--section:nth-child(2) .blog__left-box3 {
+      margin-top: 15rem; } }
+  @media only screen and (max-width: 68.75em) {
+    .blog__main-left--section:nth-child(3) .blog__left-box3 {
+      margin-top: 22rem; } }
 
 .blog__main-right {
   grid-column: blog-right-start / blog-right-end;
@@ -199,6 +205,10 @@ body {
     font-weight: 300;
     letter-spacing: .5rem;
     text-transform: uppercase; }
+  @media only screen and (max-width: 68.75em) {
+    .blog__left-box1 {
+      margin-top: 1rem;
+      line-height: 1.9; } }
 
 .blog__left-title {
   font-family: "Space Grotesk", sans-serif;
@@ -206,11 +216,18 @@ body {
   line-height: 4rem;
   padding-bottom: 2rem;
   padding-top: .7rem; }
+  @media only screen and (max-width: 68.75em) {
+    .blog__left-title {
+      padding: 1.5rem 0 3.5rem 0;
+      font-size: 4rem; } }
 
 .blog__left-content {
   font-family: "Inter", sans-serif;
   font-size: 1.7rem;
   padding-bottom: 2rem; }
+  @media only screen and (max-width: 68.75em) {
+    .blog__left-content {
+      padding-bottom: 5rem; } }
 
 .blog__left-box2 {
   color: #151515; }
@@ -249,6 +266,9 @@ body {
   display: flex;
   align-items: center;
   margin: 1rem 0 1rem 1.5rem; }
+  @media only screen and (max-width: 68.75em) {
+    .blog__left-author-box {
+      margin: 1rem 0 6rem 1.5rem; } }
 
 .blog__left-img {
   width: 4rem;
@@ -268,6 +288,9 @@ body {
   @media only screen and (max-width: 87.5em) and (pointer: coarse) {
     .blog__left-box3 {
       margin-top: 13%; } }
+  @media only screen and (max-width: 68.75em) {
+    .blog__left-box3 {
+      margin-top: 10rem; } }
   .blog__left-box3::before {
     content: "";
     position: absolute;
@@ -391,7 +414,7 @@ body {
 
 .blog__right-author-box {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: flex-start;
   margin: 1rem 0 1rem 1.5rem;
   position: relative; }
@@ -440,14 +463,18 @@ body {
   grid-column: full-start / blog-right-end;
   position: relative;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
   margin: 0 2.5rem;
-  border-top: 1px solid #94918F; }
+  border-top: 1px solid #94918F;
+  overflow-x: scroll; }
+  .blog__bottom::-webkit-scrollbar {
+    display: none; }
   .blog__bottom-item {
     color: #151515;
     flex: 0 0 25%;
-    position: relative; }
+    position: relative;
+    margin: 0 4rem;
+    display: inline-block; }
     .blog__bottom-item::before {
       content: "";
       position: absolute;
@@ -580,6 +607,12 @@ body {
     .blog__featured-link:link svg, .blog__featured-link:visited svg {
       width: 30px;
       margin-right: 1rem; }
+      @media only screen and (max-width: 68.75em) {
+        .blog__featured-link:link svg, .blog__featured-link:visited svg {
+          width: 20px; } }
+      @media only screen and (max-width: 28.125em) {
+        .blog__featured-link:link svg, .blog__featured-link:visited svg {
+          width: 15px; } }
 
 .blog__marquee-box {
   background-color: #151515;
@@ -636,6 +669,11 @@ body {
   display: grid;
   grid-template-columns: repeat(7, minmax(min-content, 1fr));
   grid-template-rows: repeat(26, 9vw);
+  grid-auto-columns: minmax(min-content, 1fr);
+  grid-auto-rows: 9vw;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   grid-auto-flow: dense; }
 
 .article1__img-box {
@@ -643,16 +681,23 @@ body {
   grid-column: 1 / -1; }
 
 .article1__img {
-  height: 100%;
+  height: 65vh;
   width: 100%;
   display: block;
   object-fit: cover;
   filter: grayscale(1); }
+  @media only screen and (max-width: 68.75em) {
+    .article1__img {
+      height: 70vh; } }
+
+.article1__title-content--wrapper {
+  display: flex; }
 
 .article1__title-box {
   grid-column: 1 / span 4;
   grid-row: 5 / span 2;
   padding-top: 2rem;
+  flex: 0 0 55%;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
@@ -661,14 +706,21 @@ body {
   color: #151515;
   font-size: 5vw;
   font-family: "Space Grotesk", sans-serif;
-  line-height: 4.5vw;
+  line-height: 4.2vw;
   font-weight: 700; }
+  @media only screen and (max-width: 68.75em) {
+    .article1__title {
+      font-size: 5.6vw;
+      line-height: 4.5vw; } }
 
 .article1__subtitle {
   color: #151515;
-  font-size: 1.65vw;
+  font-size: 1.6vw;
   font-family: "Space Grotesk", sans-serif;
   margin-bottom: -.5rem; }
+  @media only screen and (max-width: 68.75em) {
+    .article1__subtitle {
+      font-size: 1.7vw; } }
 
 .article1__content-box--right {
   grid-column: 5 / -1;
@@ -685,11 +737,14 @@ body {
 
 .article1__content-box--main {
   grid-column: 2 / span 5;
-  margin: 15rem 10rem 0 10rem;
+  margin: 15rem 35rem 0 35rem;
   padding-top: 7rem;
   border-top: 1px solid #94918F; }
   .article1__content-box--main p:last-of-type {
     border-bottom: 1px solid #94918F; }
+  @media only screen and (max-width: 68.75em) {
+    .article1__content-box--main {
+      margin: 15rem 20rem 0 20rem; } }
 
 .article1__content--main {
   color: #151515;
@@ -698,6 +753,9 @@ body {
   padding-bottom: 5rem;
   text-justify: inter-word;
   text-align: justify; }
+  @media only screen and (max-width: 87.5em) {
+    .article1__content--main {
+      font-size: 2rem; } }
   .article1__content--main-list {
     position: relative;
     padding-left: 4rem;
@@ -722,7 +780,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-top: 2rem; }
+  margin-top: 2rem;
+  margin-bottom: 15rem; }
   .article1__button-box :not(:last-child) {
     margin-right: 1rem; }
 
@@ -807,11 +866,10 @@ body {
 
 .article1__footer-box {
   grid-column: 1 / -1;
-  grid-row: 27 / span 2;
   border-top: 5px solid #151515;
   color: #151515;
   padding-bottom: 1rem;
-  margin-top: 15rem;
+  margin-top: auto;
   background: radial-gradient(circle at 5px 5px, rgba(128, 128, 128, 0.1) 1.7px, transparent 1.7px, transparent 10px) 0 0/8px 8px; }
 
 .article1__footer--wrapper {
@@ -833,6 +891,9 @@ body {
 
 .article1__footer-content-box1 {
   margin-right: 30rem; }
+  @media only screen and (max-width: 68.75em) {
+    .article1__footer-content-box1 {
+      margin-right: 10rem; } }
 
 .article1__footer-content {
   font-family: "Inter", sans-serif;
@@ -848,11 +909,18 @@ body {
   padding-bottom: 0;
   display: grid;
   grid-template-columns: repeat(7, minmax(min-content, 1fr));
-  grid-template-rows: repeat(12, 4.5vw); }
+  grid-template-rows: repeat(12, 4.5vw);
+  grid-auto-columns: minmax(min-content, 1fr);
+  grid-auto-rows: 4.5vw;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  grid-auto-flow: dense; }
 
 .article2__title-box {
   grid-column: 1 / -1;
   grid-row: 1 / span 4;
+  position: relative;
   background: radial-gradient(circle at 5px 5px, rgba(128, 128, 128, 0.1) 1.7px, transparent 1.7px, transparent 10px) 0 0/8px 8px; }
 
 .article2__title {
@@ -863,22 +931,19 @@ body {
   font-weight: 500;
   text-transform: uppercase; }
 
+.article2__title-content--wrapper {
+  display: flex; }
+
 .article2__title-box-2 {
   grid-column: 3 / -1;
   grid-row: 11 / span 2;
-  border-bottom: 10px solid black; }
+  border-bottom: 10px solid black;
+  flex: 0 0 71.3%; }
 
 .article2__title-2 {
   padding-top: 1.5rem;
   margin-right: -.1rem;
   text-align: right; }
-
-.article2__details-box {
-  grid-column: 6 / -1;
-  grid-row: 2 / span 3;
-  display: flex;
-  margin-top: 3.5rem;
-  position: relative; }
 
 .article2__details {
   color: #151515;
@@ -888,18 +953,20 @@ body {
   text-align: right;
   font-weight: 500; }
   .article2__details--1 {
-    margin-left: 10rem; }
+    position: absolute;
+    right: 20rem;
+    bottom: 17.7rem; }
   .article2__details--2 {
     position: absolute;
     right: 0;
-    bottom: 7.3rem; }
+    bottom: 6.4rem; }
 
 .article2__img-box {
   grid-column: 1 / -1;
   grid-row: 5 / span 6; }
 
 .article2__img {
-  height: 100%;
+  height: 50vh;
   width: 100%;
   display: block;
   object-fit: cover;
@@ -909,7 +976,13 @@ body {
   grid-column: 1 / span 2;
   grid-row: 11 / span 2;
   margin-top: 2.3rem;
-  margin-right: 19.6rem; }
+  margin-right: 20.5rem; }
+  @media only screen and (max-width: 87.5em) {
+    .article2__content-box--left {
+      margin-right: 18.6rem; } }
+  @media only screen and (max-width: 68.75em) {
+    .article2__content-box--left {
+      margin-right: 14.6rem; } }
 
 .article2__content--left {
   color: #151515;
@@ -928,43 +1001,44 @@ body {
 .article2__text-column--1 {
   grid-column: 1 / span 3;
   grid-row: 1 / 9;
-  padding: 0 2.5rem 0 3rem; }
+  padding: 0 2.5rem 0 3rem;
+  margin-top: -4.7rem; }
 
 .article2__text-column--2 {
   grid-column: 4 / span 3;
   grid-row: 1 / 9;
-  padding: 3rem 2.5rem 0 2.5rem; }
+  padding: 2.3rem 2.5rem 0 2.5rem; }
 
 .article2__text-column--3 {
   grid-column: 7 / span 3;
   grid-row: 1 / 9;
-  padding: 3rem 2.5rem 0 2.5rem; }
+  padding: 2.3rem 2.5rem 0 2.5rem; }
 
 .article2__text-column--4 {
   grid-column: 10 / span 3;
   grid-row: 1 / 6;
-  padding: 3rem 2.5rem 0 2.5rem; }
+  padding: 2.3rem 2.5rem 0 2.5rem; }
 
 .article2__text-column--5 {
   grid-column: 13 / span 3;
   grid-row: 1 / 6;
-  padding: 3rem 3rem 0 2.5rem; }
+  padding: 2.3rem 3rem 0 2.5rem; }
 
 .article2__text-column--6 {
   grid-column: 1 / span 2;
-  margin-top: -3.7rem;
+  margin-top: -3rem;
   padding-left: 3rem;
   padding-right: 5rem; }
 
 .article2__text-column--7 {
   grid-column: 1 / span 3;
-  padding-top: 5.4rem;
+  padding-top: 4.5rem;
   padding-left: 3rem;
   padding-right: 2.5rem; }
 
 .article2__text-column--8 {
   grid-column: 4 / span 3;
-  padding: 5.3rem 2.5rem 0 2.5rem; }
+  padding: 4.5rem 2.5rem 0 2.5rem; }
 
 .article2__text-column--9 {
   grid-column: 12 / span 2;
@@ -975,11 +1049,11 @@ body {
   grid-row: 7 / span 3;
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-  margin-top: -.5rem; }
+  margin-top: -1.3rem; }
 
 .article2__text-column--11 {
   grid-column: 10 / span 3;
-  grid-row: 11 / -1;
+  grid-row: 11 / 20;
   padding: 0 2.5rem 0 2.5rem;
   margin-top: -5.9rem; }
 
@@ -987,21 +1061,22 @@ body {
   grid-column: 14 / -1;
   grid-row: 7 / span 3;
   padding-left: 2.5rem;
-  padding-right: 3rem; }
+  padding-right: 3rem;
+  margin-top: -1.5rem; }
 
 .article2__text-column--13 {
   grid-column: 13 / span 3;
   grid-row: 11 / 19;
   padding-left: 2.5rem;
   padding-right: 3rem;
-  margin-top: -5.8rem; }
+  margin-top: -6.2rem; }
 
 .article2__text-column--14 {
   grid-column: 13 / -1;
-  grid-row: 19 / -1;
+  grid-row: 19 / 20;
   margin-right: 3rem;
   margin-left: 2.5rem;
-  margin-top: 7rem;
+  margin-top: -4.2rem;
   text-align: right;
   border-top: 1px solid #94918F; }
 
@@ -1018,7 +1093,6 @@ body {
   line-height: 1.3;
   text-justify: inter-word;
   text-align: justify;
-  text-indent: 10%;
   hyphens: auto; }
 
 .article2__text-heading {
@@ -1040,3 +1114,43 @@ body {
   width: 100%;
   object-fit: cover;
   filter: grayscale(1); }
+
+.blog__marquee-box-2 {
+  background-color: #151515;
+  color: #E9E6E4;
+  grid-column: 1 / -1;
+  grid-row: 20 / 21;
+  display: flex;
+  align-items: center; }
+
+.marquee__paragraph-2 {
+  font-family: "Inter", sans-serif;
+  font-size: 4rem;
+  position: relative;
+  font-weight: 700; }
+
+.marquee__inner-2 p {
+  margin: 0 2rem; }
+
+.wrapper-2 {
+  max-width: 100%;
+  overflow: hidden; }
+
+.marquee-2 {
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block; }
+
+.marquee__inner-2 {
+  display: inline-block;
+  animation: marquee calc(100s / 1000 * var(--width)) linear infinite;
+  --width: 800; }
+
+.marquee__inner-2 p {
+  display: inline-block; }
+
+@keyframes marquee {
+  0% {
+    transform: translate3d(0, 0, 0); }
+  100% {
+    transform: translate3d(-100%, 0, 0); } }
