--- a/sass/articlev1.scss
+++ b/sass/articlev1.scss
@@ -9,6 +9,13 @@
   display: grid;
   grid-template-columns: repeat(7, minmax(min-content, 1fr));
   grid-template-rows: repeat(26, 9vw);
+
+  grid-auto-columns: minmax(min-content, 1fr);
+  grid-auto-rows: 9vw;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  
   grid-auto-flow: dense;
 }
 
@@ -19,17 +26,25 @@
     grid-column: 1 / -1;
   }
   &__img {
-    height: 100%;
+    height: 65vh;
     width: 100%;
     display: block;
     object-fit: cover;
     filter: grayscale(1);
+
+    @media only screen and (max-width: $breakpoint-medium) {
+      height: 70vh;
+    }
   }
 
+  &__title-content--wrapper {
+    display: flex;
+  }
   &__title-box {
     grid-column: 1 / span 4;
     grid-row: 5 / span 2;
     padding-top: 2rem;
+    flex: 0 0 55%;
 
     display: flex;
     flex-direction: column;
@@ -41,15 +56,24 @@
     font-size: 5vw;
     font-family: $font-title;
     // line-height: 9rem;
-    line-height: 4.5vw;
+    line-height: 4.2vw;
     font-weight: 700;
+
+    @media only screen and (max-width: $breakpoint-medium) {
+      font-size: 5.6vw;
+      line-height: 4.5vw;
+    }
   }
   &__subtitle {
     color: $color-text;
     // font-size: 3.3rem;
-    font-size: 1.65vw;
+    font-size: 1.6vw;
     font-family: $font-title;
     margin-bottom: -.5rem;
+
+    @media only screen and (max-width: $breakpoint-medium) {
+      font-size: 1.7vw;
+    }
   }
 
   &__content-box--right {
@@ -74,13 +98,16 @@
 
   &__content-box--main {
     grid-column: 2 / span 5;
-    margin: 15rem 10rem 0 10rem;
+    margin: 15rem 35rem 0 35rem;
     padding-top: 7rem;
     border-top: 1px solid $color-border;
 
     & p:last-of-type {
-      // padding-bottom: 0;
       border-bottom: 1px solid $color-border;
+    }
+
+    @media only screen and (max-width: $breakpoint-medium) {
+      margin: 15rem 20rem 0 20rem;
     }
   }
   &__content--main {
@@ -91,6 +118,10 @@
 
     text-justify: inter-word;
     text-align: justify;
+
+    @media only screen and (max-width: $breakpoint-large) {
+      font-size: 2rem;
+    }
 
     &-list {
       position: relative;
@@ -123,6 +154,7 @@
     align-items: center;
     justify-content: flex-end;
     margin-top: 2rem;
+    margin-bottom: 15rem;
 
     & :not(:last-child) {
       margin-right: 1rem;
@@ -180,7 +212,7 @@
       0%   { transform: scale(1); }
       90%   { transform: scale(1.2); }
       100% { transform: scale(1.1); }
-}
+    }
 
   }
 
@@ -246,12 +278,13 @@
 
   &__footer-box {
     grid-column: 1 / -1;
-    grid-row: 27 / span 2;
+    // grid-row: 27 / span 2;
 
     border-top: 5px solid $color-text;
     color: $color-text;
     padding-bottom: 1rem;
-    margin-top: 15rem;
+    // margin-top: 15rem;
+    margin-top: auto;
 
     background:
       radial-gradient(circle at 5px 5px,
@@ -284,6 +317,10 @@
   }
   &__footer-content-box1 {
     margin-right: 30rem;
+
+    @media only screen and (max-width: $breakpoint-medium) {
+      margin-right: 10rem;
+    }
   }
   &__footer-content-box2 {
 
