--- a/sass/articlev2.scss
+++ b/sass/articlev2.scss
@@ -9,6 +9,14 @@
   display: grid;
   grid-template-columns: repeat(7, minmax(min-content, 1fr));
   grid-template-rows: repeat(12, 4.5vw);
+
+  grid-auto-columns: minmax(min-content, 1fr);
+  grid-auto-rows: 4.5vw;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  
+  grid-auto-flow: dense;
 }
 
 
@@ -16,6 +24,8 @@
   &__title-box {
     grid-column: 1 / -1;
     grid-row: 1 / span 4;
+
+    position: relative;
     background:
         radial-gradient(circle at 5px 5px,
           rgba(grey, .1) 1.7px,
@@ -30,24 +40,20 @@
     font-weight: 500;
     text-transform: uppercase;
   }
+  &__title-content--wrapper {
+    display: flex;
+  }
   &__title-box-2 {
     grid-column: 3 / -1;
     grid-row: 11 / span 2;
 
     border-bottom: 10px solid black;
+    flex: 0 0 71.3%;
   }
   &__title-2 {
     padding-top: 1.5rem;
     margin-right: -.1rem;
     text-align: right;
-  }
-  &__details-box {
-    grid-column: 6 / -1;
-    grid-row: 2 / span 3;
-
-    display: flex;
-    margin-top: 3.5rem;
-    position: relative;
   }
   &__details {
     color: $color-text;
@@ -58,12 +64,14 @@
     font-weight: 500;
 
     &--1 {
-      margin-left: 10rem;
+      position: absolute;
+      right: 20rem;
+      bottom: 17.7rem;
     }
     &--2 {
       position: absolute;
       right: 0;
-      bottom: 7.3rem;
+      bottom: 6.4rem;
     }
   }
 
@@ -74,7 +82,7 @@
     grid-row: 5 / span 6;
   }
   &__img {
-    height: 100%;
+    height: 50vh;
     width: 100%;
     display: block;
     object-fit: cover;
@@ -85,7 +93,14 @@
     grid-column: 1 / span 2;
     grid-row: 11 / span 2;
     margin-top: 2.3rem;
-    margin-right: 19.6rem;
+    margin-right: 20.5rem;
+
+    @media only screen and (max-width: $breakpoint-large) {
+      margin-right: 18.6rem;
+    }
+    @media only screen and (max-width: $breakpoint-medium) {
+      margin-right: 14.6rem;
+    }
   }
   &__content--left {
     color: $color-text;
@@ -114,42 +129,43 @@
       grid-column: 1 / span 3;
       grid-row: 1 / 9;
       padding: 0 2.5rem 0 3rem;
+      margin-top: -4.7rem;
     }
     &--2 {
       grid-column: 4 / span 3;
       grid-row: 1 / 9;
-      padding: 3rem 2.5rem 0 2.5rem;
+      padding: 2.3rem 2.5rem 0 2.5rem;
     }
     &--3 {
       grid-column: 7 / span 3;
       grid-row: 1 / 9;
-      padding: 3rem 2.5rem 0 2.5rem;
+      padding: 2.3rem 2.5rem 0 2.5rem;
     }
     &--4 {
       grid-column: 10 / span 3;
       grid-row: 1 / 6;
-      padding: 3rem 2.5rem 0 2.5rem;
+      padding: 2.3rem 2.5rem 0 2.5rem;
     }
     &--5 {
       grid-column: 13 / span 3;
       grid-row: 1 / 6;
-      padding: 3rem 3rem 0 2.5rem;
+      padding: 2.3rem 3rem 0 2.5rem;
     }
     &--6 {
       grid-column: 1 / span 2;
-      margin-top: -3.7rem;
+      margin-top: -3rem;
       padding-left: 3rem;
       padding-right: 5rem;
     }
     &--7 {
       grid-column: 1 / span 3;
-      padding-top: 5.4rem;
+      padding-top: 4.5rem;
       padding-left: 3rem;
       padding-right: 2.5rem;
     }
     &--8 {
       grid-column: 4 / span 3;
-      padding: 5.3rem 2.5rem 0 2.5rem;
+      padding: 4.5rem 2.5rem 0 2.5rem;
     }
     &--9 {
       grid-column: 12 / span 2;
@@ -160,11 +176,11 @@
       grid-row: 7 / span 3;
       padding-left: 2.5rem;
       padding-right: 2.5rem;
-      margin-top: -.5rem;
+      margin-top: -1.3rem;
     }
     &--11 {
       grid-column: 10 / span 3;
-      grid-row: 11 / -1;
+      grid-row: 11 / 20;
       padding: 0 2.5rem 0 2.5rem;
       margin-top: -5.9rem;
     }
@@ -173,20 +189,21 @@
       grid-row: 7 / span 3;
       padding-left: 2.5rem;
       padding-right: 3rem;
+      margin-top: -1.5rem;
     }
     &--13 {
       grid-column: 13 / span 3;
       grid-row: 11 / 19;
       padding-left: 2.5rem;
       padding-right: 3rem;
-      margin-top: -5.8rem;
+      margin-top: -6.2rem;
     }
     &--14 {
       grid-column: 13 / -1;
-      grid-row: 19 / -1;
+      grid-row: 19 / 20;
       margin-right: 3rem;
       margin-left: 2.5rem;
-      margin-top: 7rem;
+      margin-top: -4.2rem;
       text-align: right;
 
       border-top: 1px solid $color-border;
@@ -207,7 +224,7 @@
 
     text-justify: inter-word;
     text-align: justify;
-    text-indent: 10%;
+    // text-indent: 10%;
     hyphens: auto;
   }
   &__text-heading {
@@ -236,3 +253,61 @@
 
 }
 
+
+.blog__marquee-box-2 {
+  background-color: $color-text;
+  color: $color-bg;
+
+  grid-column: 1 / -1;
+  grid-row: 20 / 21;
+
+  display: flex;
+  align-items: center;
+  // margin-top: -10rem;
+}
+
+.marquee__paragraph-2 {
+  font-family: $font-subtitle;
+  font-size: 4rem;
+  position: relative;
+  font-weight: 700;
+}
+
+.marquee__inner-2 p {
+  margin: 0 2rem;
+}
+
+
+.wrapper-2 {
+  max-width: 100%;
+  overflow: hidden;
+  
+}
+
+.marquee-2 {
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  
+}
+
+.marquee__inner-2 {
+  display: inline-block;
+  animation: marquee calc(100s / 1000 * var(--width)) linear infinite;
+  --width: 800;
+
+}
+
+.marquee__inner-2 p {
+  display: inline-block;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
