--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -59,3 +59,42 @@ body {
     grid-template-rows: 12.6vh 60vh 22vh 3vh;
   }
 }
+
+
+// ANIMATIONS.
+.hidden-bottom {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateY(20%);
+  transition: all .8s;
+}
+
+.hidden-left {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-20%);
+  transition: all .8s;
+}
+
+.hidden-right {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(15%);
+  transition: all .8s;
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0) translateY(0);
+}
+
+.stagger:nth-child(2) {
+  transition-delay: 200ms;
+}
+.stagger:nth-child(3) {
+  transition-delay: 400ms;
+}
+.stagger:nth-child(4) {
+  transition-delay: 600ms;
+}
